# dag

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.lock.txt  setup.py  test.ipynb  workspace.yaml
DAGSTER_HOME/.telemetry/: id.yaml
dag/: cd_bppedd_processing.py  cd_bppedd_processing_turso.py  cd_constants.py  cd_display_processing.py  cd_history.py  cd_history_bppedds.py  cd_history_marketcaps.py  cd_history_prices.py  cd_img_r2_docker.py  cd_img_r2_node.py  cd_img_r2_processing.py  cd_marketcap_processing.py  cd_marketcap_processing_turso.py  cd_metrics_processing.py  cd_metrics_processing_turso.py  cd_price_processing.py  cd_price_processing_turso.py  cd_raw_ingestion.py  cd_raw_ingestion_turso.py  definitions.py  ds_img_r2_docker.py  ds_img_r2_node.py  ds_img_r2_processing.py  is_data_cluster.py  is_data_llm.py  is_data_sql.sql  is_data_sync.py  is_data_unsync.py  is_data_vlm.py  is_node.py  is_sensor_output_data.py  jobs.py  nps_data_processing.py  nps_index_optimization.py  nps_kyc_etl.py  nps_postgres_simple.py  nps_raw_ingestion.py  partitions.py  resources.py  schedules.py  (+4 more)
dag/cd_crawlee/cd-naver-crawler/: Dockerfile  package-lock.json  package.json
dag/cd_crawlee/cd-naver-crawler/src/: main.ts  (+1 more)
dag/is_crawlee/clien-park/: package.json
dag/is_crawlee/damoang/: package-lock.json
dag/is_crawlee/fmkorea/: package-lock.json  package.json
dag/is_crawlee/ppomppu-hot/: package-lock.json  package.json
dag/ss_crawlee/ppomppu-phone/: package-lock.json  package.json
docs/: cd.md  coding.md  ds.md  is.md  nps.md  overview.md  ss.md
(+12 files in other folders)
